# module-package

./: conftest.py  pyproject.toml
src/company/acc/: __init__.py  f_something.py
src/company/dp/logic/business/: __init__.py  alter_customer.py  filter_customer.py  review_customers.py
src/company/dp/logic/general/: __init__.py  some_function.py
tests/company/dp/logic/business/: test_alter_customer.py  test_review_customer.py
